# budget

./: .gitignore  .prettierignore  Cargo.toml  README.md  Rocket.toml  autoformat.sh
.cargo/: config.toml
db/: current.sql  delta.1.sql  delta.2.sql  delta.3.sql  delta.5.sql  delta.9.sql  delta004.sql  delta006.sql  delta007.sql  delta008.sql  delta010.sql  delta011.sql  delta012.sql  delta013.sql  init.sql  schema_dump.sql
js/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json  webpack.config.js
js/src/: AccountExpensesButtons.tsx  AccountSelector.tsx  AccountsCard.tsx  AccountsPage.tsx  AccountsSection.tsx  AccountsView.ts  AccountsView.tsx  AllowanceForm.tsx  AnalyzeCard.tsx  AnalyzePage.tsx  App.tsx  AppSettings.tsx  AppSettingsProvider.ts  BudgetAllowanceForm.tsx  BudgetAmountForm.tsx  BudgetCard.tsx  BudgetCategoryForm.tsx  BudgetChart.tsx  BudgetCloneForm.tsx  BudgetFundForm.tsx  BudgetItemForm.tsx  BudgetItemSelect.tsx  BudgetPage.tsx  BudgetPageSettings.tsx  BudgetView.ts  BudgetViewContext.tsx  CategorizationPane.tsx  Common.ts  CommonUI.tsx  ExpenseView.ts  ExpensesCard.tsx  ExpensesList.tsx  ExpensesListButtons.tsx  (+17 more)
src/: account.rs  api_routes.rs  budget.rs  common.rs  credentials.rs  crypto.rs  database.rs  database_enum.rs  datetime.rs  error.rs  expense.rs  fund.rs  genjs.rs  import.rs  lib.rs  main.rs  migration.rs  passwords.rs  record_mapping.rs  routes.rs  schema_test.rs  server.rs  spending.rs  statement_import.rs  statement_import_config.rs  statement_schema.rs  write_log.rs
www/: bundle.js  index.html  login.html
(+80 files in other folders)
