[package]
name = "budget"
version = "0.1.0"
edition = "2021"
default-run="budget"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
chrono-tz = "0.10.1"
clap = { version = "4.5.29", features = ["derive"] }
csv = "1.3.1"
dateparser = "0.2.1"
libsodium-sys-stable = "1.22.2"
regex = "1.11.1"
rocket = { version = "0.5.1", features = ["json", "secrets"] }
serde = "1.0.217"
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.43.0", features = ["macros", "rt", "rt-multi-thread"] }
ts-rs = "10.1.0"
